HW Jan 19th half

--- a/main.tex
+++ b/main.tex
@@ -2499,32 +2499,32 @@ So, the order of claim 1 and 2 has to be reversed. \\
 
     \begin{enumerate}[label=\textbf{Case \arabic*}, leftmargin=3.5em]
         \item After a refusal, the applicant filed a main request and an auxiliary request with the letter of appeal. The main request is the same as the one refused (i.e. not amended). However, the auxiliary request corresponds to a suggestion made by the examining division and would thus be allowable. \\
-        \textbf{1.} There must be an interlocutory revision.
+        \textbf{1.} There must be an interlocutory revision. \F -- the MR will be rejected, so the case has to go to BoA.
 
         \item After a refusal for lack of novelty only, the applicant filed new claims with the letter of appeal. The new claims are clearly novel but not inventive. The question of inventive step had not been raised in the decision or in the previous procedure. \\
-        \textbf{2.} There must be an interlocutory revision.
+        \textbf{2.} There must be an interlocutory revision. \T -- the grounds for refusal have been overcome.
 
         \item After a refusal for lack of novelty over D1, the applicant filed a new claim 1 with the letter of appeal. New claim 1 filed which includes a feature from the description. This feature had not been previously discussed per se; however, it is clearly disclosed in D1. \\
-        \textbf{3.} There must be an interlocutory revision.
+        \textbf{3.} There must be an interlocutory revision. \F -- grounds for refusal have not been overcome. 
 
         \item After a refusal for lack of inventive step vis-a-vis D1 and D2, the applicant filed new claims with the letter of appeal. The new claims include a feature from the description. This feature had not been previously discussed, but is clearly disclosed in D1. \\
-        \textbf{4.} There must be an interlocutory revision.
+        \textbf{4.} There must be an interlocutory revision. \F -- the feature is not novel over D1, hence it cannot be a distinguishing feature contributing to an IS argument that could overcome the grounds for refusal. 
 
         \item After a refusal for lack of inventive step vis-a-vis D1 and D2, the applicant filed a new claim with the letter of appeal. The new claim includes five new features from the description. These features have not been previously discussed. The examiner notes that although these features are disclosed in D2, the lack-of-inventive-step argumentation would have to be revised. \\
-        \textbf{5.} There must be an interlocutory revision.
+        \textbf{5.} There must be an interlocutory revision. \T -- grounds for refusal have been overcome. The key critera there are that: \textit{1.} the text is no longer the same; and \textit{2.} substantial amendments have been made. 
 
         \item After a refusal for lack of clarity of the claims, the applicant included a wording that has already been suggested by the examiner. The new claims are ready for grant but the description needs to be adapted. \\
-        \textbf{6.} There must be an interlocutory revision.
+        \textbf{6.} There must be an interlocutory revision. \T -- grounds for refusal have been overcome.
 
         \item After a refusal, the applicant points out in the letter of appeal that the examining division has overlooked a request for oral proceedings. Neither claims nor description are amended. The examining division looks at the file and notes that the request for oral proceedings was indeed overlooked.
         \begin{enumerate}[label=\textbf{7.\arabic*}]
-            \item There must be an interlocutory revision.
-            \item Interlocutory revision must even be made if it is expected to result in a further refusal after oral proceedings have been held.
-            \item If interlocutory revision is made, the appeal fee must be refunded.
+            \item There must be an interlocutory revision. \T
+            \item Interlocutory revision must even be made if it is expected to result in a further refusal after oral proceedings have been held. \T
+            \item If interlocutory revision is made, the appeal fee must be refunded. \T -- refusing a requested oral proceeding is a substantial procedural violation.
         \end{enumerate}
 
         \item On the date of filing, the application documents did not comply with the requirements of Rule 46 EPC. The application was subsequently refused pursuant Art. 90(5) EPC since the applicant filed the same poor-quality drawings in reply to the communication under Rule 58 EPC. When filing an appeal complying with the requirements of Art. 108, the applicant also files drawings of sufficient quality, thereby correcting the deficiency on which the refusal was based. \\
-        \textbf{8.} There must be an interlocutory revision.
+        \textbf{8.} There must be an interlocutory revision. \T -- grounds for refusal have been overcome.
     \end{enumerate}
 \vspace{1cm}
     % --- Question 3 ---
@@ -2553,10 +2553,10 @@ So, the order of claim 1 and 2 has to be reversed. \\
     % --- Question 5 ---
     \item H10-24 (Basic selection)
     \begin{enumerate}[label=(\alph*)]
-        \item Can a decision of a Board of Appeal be challenged?
-        \item On which grounds may a petition for review be based?
-        \item Does a petition for review have suspensive effect? Why (not)?
-        \item Are third parties protected at all if a successful petition for review results in the revival of lost patent protection?
+        \item Can a decision of a Board of Appeal be challenged? \T -- one can file a \textbf{petition for review} (never another appeal) if they are a party adversely affected by the appeal decision. EBoA will only find it admissable if an objection in respect of a procedural defect was raised during the appeal proceedings but dismissed by the BoA.
+        \item On which grounds may a petition for review be based? - the objection that was dismissed must be raised in such a form that it is recognizable for the BoA that an objection pursuant to \ru{106} is intended \textbf{and} the objection must be specific in that it is obvious which from the list of objections under \art{112a}, i.e,: member of BoA took part despite being exluded; a person not appointed to the BoA took part; violation of \art{113} happened; fundamental procedural defect happened; or a criminal act may have had an impact on the decision, e.g., falsified evidence. 
+        \item Does a petition for review have suspensive effect? Why (not)? \F --  matter of extraordinary legal remedy, the filing of which does not affect the \textit{res judicata} quality of the decision.
+        \item Are third parties protected at all if a successful petition for review results in the revival of lost patent protection? \art{112a(6)} protects third parties, giving them right to continue using the invention if they, in good faith, made effective and serious preparations to use the invention in the period between the BoA decision and the EBoA decision.
     \end{enumerate}
 
 \end{enumerate}    
