HW Jan 19th ALL

--- a/main.tex
+++ b/main.tex
@@ -2532,10 +2532,10 @@ So, the order of claim 1 and 2 has to be reversed. \\
     The notice of appeal and the statement setting out the grounds of appeal are filed and the fee for appeal is paid in time. \\
     In which of the following cases is the notice of appeal inadmissible? Can the deficiency be remedied? What period applies? Will the appeal fee be refunded?
     \begin{enumerate}[label=(\alph*)]
-        \item The notice of appeal is not signed.
-        \item The address of the appellant is incomplete.
-        \item The notice of appeal is filed by the patent proprietor following a decision of the Opposition Division to maintain the patent based on the main request and in a form as amended by the proprietor.
-        \item The grounds give a mere reference in general terms to passages in the literature showing the state of the art and to the Guidelines without making their inference sufficiently clear.
+        \item The notice of appeal is not signed. --- Must be signed. Deficiency to be corrected after EPO invitation (usually \textbf{2m} deadline -- and can be after expiry of period for appeal). If not rectified in time, the appeal will be \textbf{\textit{deemed to not have been filed}}. As there is then no legal basis for having paid the appeal fee, the fee will be refunded in full. The filed documents will be saved in the file as observations.
+        \item The address of the appellant is incomplete. --- Identifying Appellant is sufficient to have successfully filed the appeal. The address issues is a deficiency to be corrected within \textbf{2m} after invitation from EPO. If not corrected on time, the appeal will be \textbf{\textit{deemed inadmissable}}. There is \underline{no fee refund for inadmissable appeals.} Can also use \ru{139} to correct incorrect Appellant information.          
+        \item The notice of appeal is filed by the patent proprietor following a decision of the Opposition Division to maintain the patent based on the main request and in a form as amended by the proprietor. --- \textbf{cannot appeal a decision based on a granted main request}. The appeal will be deemed inadmissable and there will be no fee refund. 
+        \item The grounds give a mere reference in general terms to passages in the literature showing the state of the art and to the Guidelines without making their inference sufficiently clear. --- this is not sufficient reason for appeal and will be deemed inadmissable and there will be no fee refund. Can be remedied before the end of the 4-month period only -- \textbf{R.101(1) EPC}.
     \end{enumerate}
 
     \vspace{1cm}
@@ -2544,10 +2544,10 @@ So, the order of claim 1 and 2 has to be reversed. \\
     European patent application EP-Y was refused at oral proceedings before the examining division. The oral proceedings took place on 19 February 2021. Today, 1 March 2021, you received the written reasoned decision. \\
     For each of the statements below, indicate whether the statement is true or false:
     \begin{enumerate}[label=\Alph*.]
-        \item A notice of appeal against the decision to refuse the patent application must be filed at the latest by 19 April 2021.
-        \item The statement setting out the grounds of appeal and possibly amendments must be filed together with the notice of appeal.
-        \item The examining division shall rectify its decision if it finds the appeal to be admissible and well-founded.
-        \item The appeal fee is always reimbursed, if the board of appeal sets aside the decision of the examining division.
+        \item A notice of appeal against the decision to refuse the patent application must be filed at the latest by 19 April 2021. \F -- period runs from the receipt of the written decision (but you can file the appeal once you hear the decision at oral proceedings before receiving the written decision). 
+        \item The statement setting out the grounds of appeal and possibly amendments must be filed together with the notice of appeal.    \F   -- deadline for grounds is \textbf{4m} from the decision; notice of appeal is \textbf{2m} from the decision. 
+        \item The examining division shall rectify its decision if it finds the appeal to be admissible and well-founded. \T -- this is the case of the \textbf{interlocutory revision}.
+        \item The appeal fee is always reimbursed, if the Board of Appeal sets aside the decision of the examining division.      \F -- there needs to be a procedural violation. 
     \end{enumerate}
 \vspace{1cm}
     % --- Question 5 ---
