--- a/main.tex
+++ b/main.tex
@@ -2563,5 +2563,132 @@ So, the order of claim 1 and 2 has to be reversed. \\
     
     
 \end{enumerate} % End of LEVEL 1
+\section{January 26, 2026}
 
+\begin{enumerate}[label=\textbf{Question \arabic*}, leftmargin=*]
+
+    % --- QUESTION 1 ---
+    \item H11-04 - T/F question (Basic selection) \\
+    For each of the statements below, indicate whether the statement is true or false.
+    \begin{itemize}[leftmargin=3.5em]
+        \item[\textbf{(a)}] Any third party may file observations concerning the patentability of an invention but, by that act, do not become a party to the proceedings.
+        \item[\textbf{(b)}] Any party to the proceedings may file third party observations concerning the patentability of an invention.
+        \item[\textbf{(c)}] If prima facie relevant third party observations are filed after the applicant has given his approval under \ru{71(3)}, the examining division may not resume examination proceedings.
+        \item[\textbf{(d)}] Third party observations can be filed during opposition proceedings.
+        \item[\textbf{(e)}] Third party observations can be filed during limitation proceedings.
+        \item[\textbf{(f)}] Third party observations can be filed during central revocation proceedings.
+    \end{itemize}
+
+    \vspace{1cm}
+
+    % --- QUESTION 2 ---
+    \item H11-05 - T/F question (Basic selection) \\
+    For each of the statements below, indicate whether the statement is true or false.
+    \begin{itemize}[leftmargin=3.5em]
+        \item[\textbf{(a)}] Oral proceedings may only be held at the request of any party to the proceedings.
+        \item[\textbf{(b)}] A first request for oral proceedings by a party to the proceedings may not be refused before a decision to refuse the application is taken.
+        \item[\textbf{(c)}] Oral proceedings before the Examining Division are, in principle, public.
+        \item[\textbf{(d)}] Oral proceedings before the Opposition Division are, in principle, public.
+    \end{itemize}
+
+      \vspace{1cm}
+
+    % --- QUESTION 3 ---
+    \item H12-03 - T/F question (Basic selection) \\
+    Today, 17 March 2023, an applicant wishes to file a European patent application claiming priority of his earlier national German application. The earlier application was filed on 27 April 2022 with the German patent office. Thursday 27 April 2023 is a national holiday in the Netherlands, but not in Germany.
+
+    \vspace{0.5em}
+    \textbf{The last day to validly file the European patent application, while validly claiming priority:}
+    \begin{itemize}[leftmargin=3.5em]
+        \item[\textbf{(a)}] ... with the EPO in Munich is 27 April 2023.
+        \item[\textbf{(b)}] ... with the EPO in The Hague is 27 April 2023.
+        \item[\textbf{(c)}] ... with the German patent office in Munich is 27 April 2023.
+    \end{itemize}
+
+    \vspace{0.5em}
+    \textit{The applicant wishes to file another EP application claiming priority of a German application filed on 14 July 2022. Friday 14 July 2023 is a holiday in France, but a normal working day in Germany and the Netherlands.}
+
+    \vspace{0.5em}
+    \textbf{The last day to validly file the application, while validly claiming priority:}
+    \begin{itemize}[leftmargin=3.5em]
+        \item[\textbf{(d)}] .. with the EPO in Munich is 14 July 2023.
+        \item[\textbf{(e)}] ... with the EPO in Munich is 15 July 2023.
+        \item[\textbf{(f)}] ... with the EPO in Munich is 17 July 2023.
+        \item[\textbf{(g)}] ... with the German patent office in Munich is 14 July 2023.
+        \item[\textbf{(h)}] ... with the German patent office in Munich is 17 July 2023.
+        \item[\textbf{(i)}] ... with the national French Patent Office is 14 July 2023.
+        \item[\textbf{(j)}] ... with the national French Patent Office is 15 July 2023.
+        \item[\textbf{(k)}] ... with the national French Patent Office is 17 July 2023.
+    \end{itemize}
+
+    \vspace{0.5em}
+    \textbf{General Priority Statements:}
+    \begin{itemize}[leftmargin=3.5em]
+        \item[\textbf{(l)}] The applicant may request an extension of the priority period with another 2 months.
+        \item[\textbf{(m)}] Failure to meet the priority period may be remedied using further processing provided all requirements are fulfilled.
+        \item[\textbf{(n)}] Failure to meet the priority period may be remedied using re-establishment provided all requirements are fulfilled.
+        \item[\textbf{(o)}] Failure to meet the priority period may be remedied by adding a declaration of priority to the earlier application within 16 months from the earliest priority date claimed.
+    \end{itemize}
+
+      \vspace{1cm}
+
+    % --- QUESTION 4 ---
+    \item H12-08 \\
+    Representing Mr. A: Communication C1 (\art{94(3)}), dated 21 June 2019 (4m period). 21 Oct 2019: 2m extension granted. 18 Dec 2019: further 1m extension requested (rejected in C2 on 10 Jan 2020). Loss of rights noted in C3 on 22 Jan 2020.
+    \begin{itemize}[leftmargin=3.5em]
+        \item[\textbf{(a)}] What is the legal status today, 15 March 2020, and what would you do to save the application?
+        \item[\textbf{(b)}] Would an appeal against the rejection dated 10 January 2020 be admissible?
+        \item[\textbf{(c)}] Can you have the finding as to the loss of rights reviewed by a Board of Appeal?
+    \end{itemize}
+
+    \vspace{1cm}
+
+    % --- QUESTION 5 ---
+    \item H13-11 - T/F question (Basic selection) \\
+    NL1 filed 2 Feb 2018. Today, 4 April 2019, the applicant discovers he forgot to file an EP application claiming priority.
+    \begin{itemize}[leftmargin=3.5em]
+        \item[\textbf{(a)}] Filed today claiming priority without specific remedy if NL1 is not yet published.
+        \item[\textbf{(b)}] Filed today and priority added until 2 June 2019 without FP or RE.
+        \item[\textbf{(c)}] Filed today and priority added until 3 June 2019 without FP or RE.
+        \item[\textbf{(d)}] Too late to file and request RE, as the last day for RE was 2 April 2019.
+        \item[\textbf{(e)}] Only possible if filed today and requesting RE today.
+    \end{itemize}
+
+    \vspace{1cm}
+
+    % --- QUESTION 6 ---
+    \item H13-12 - T/F question (Basic selection) \\
+    Applicant mistyped application number in \art{94(3)} response. EPO faxed/phoned before expiry. EPO employee said "OK" on phone, but loss of rights noted a month later.
+    \begin{itemize}[leftmargin=3.5em]
+        \item[\textbf{(a)}] Remedy by asking for a decision and arguing good faith/telephone call date.
+        \item[\textbf{(b)}] Remedy by requesting free 2m extension of original 4m limit.
+        \item[\textbf{(c)}] Remedy by payment of FP fee and filing correct response within 2m of C3.
+        \item[\textbf{(d)}] Remedy by payment of RE fee and arguing all due care within 2m of C3.
+    \end{itemize}
+
+  \vspace{1cm}
+
+    % --- QUESTION 7 ---
+    \item H14-03 - T/F question (Basic selection) \\
+    EP filed 12 March 2015; claims priority from P-NL filed 16 June 2014.
+    \begin{itemize}[leftmargin=3.5em]
+        \item[\textbf{(a)}] The "first" renewal fee is due on... \textbf{(a.1)} 31/03/16, \textbf{(a.2)} 31/03/17, \textbf{(a.3)} 31/03/18.
+        \item[\textbf{(b)}] Last day for payment (no additional fee) for 3rd year is... \textbf{(b.3)} 31/03/18, \textbf{(b.4)} 02/04/18.
+        \item[\textbf{(c)}] Last day for payment (with additional fee) for 3rd year is... \textbf{(c.2)} 30/09/17, \textbf{(c.3)} 02/10/17.
+        \item[\textbf{(d)}] Last day for payment (no additional fee) for 4th year is... \textbf{(d.2)} 31/03/18, \textbf{(d.4)} 03/04/18.
+    \end{itemize}
+
+  \vspace{1cm}
+
+    % --- QUESTION 8 ---
+    \item H14-05 - T/F question (Basic selection)
+    \begin{itemize}[leftmargin=3.5em]
+        \item[\textbf{(a.1-4)}] Remedy for missed renewal fee: 2 months or 6 months? From due date or communication?
+        \item[\textbf{(a.5-6)}] If fee + 50\% not paid: application deemed withdrawn or refused?
+        \item[\textbf{(a.7-8)}] Remedy if additional period missed: FP or RE?
+        \item[\textbf{(b)}] Non-payment takes effect on: due date or expiry of additional period?
+        \item[\textbf{(c)}] Renewal fee refund: if requested on/before due date, or if application not pending?
+    \end{itemize}
+
+\end{enumerate}
 \end{document}
