HW Jan 26th half

--- a/main.tex
+++ b/main.tex
@@ -2571,12 +2571,12 @@ So, the order of claim 1 and 2 has to be reversed. \\
     \item H11-04 - T/F question (Basic selection) \\
     For each of the statements below, indicate whether the statement is true or false.
     \begin{itemize}[leftmargin=3.5em]
-        \item[\textbf{(a)}] Any third party may file observations concerning the patentability of an invention but, by that act, do not become a party to the proceedings.
-        \item[\textbf{(b)}] Any party to the proceedings may file third party observations concerning the patentability of an invention.
-        \item[\textbf{(c)}] If prima facie relevant third party observations are filed after the applicant has given his approval under \ru{71(3)}, the examining division may not resume examination proceedings.
-        \item[\textbf{(d)}] Third party observations can be filed during opposition proceedings.
-        \item[\textbf{(e)}] Third party observations can be filed during limitation proceedings.
-        \item[\textbf{(f)}] Third party observations can be filed during central revocation proceedings.
+        \item[\textbf{(a)}] Any third party may file observations concerning the patentability of an invention but, by that act, do not become a party to the proceedings. \T
+        \item[\textbf{(b)}] Any party to the proceedings may file third party observations concerning the patentability of an invention. \F -- the provision of \art{115} is only for \textit{third} parties, i.e., those not already party to the proceedings.
+        \item[\textbf{(c)}] If \textit{prima facie} relevant third party observations are filed after the applicant has given his approval under \ru{71(3)}, the Examining Division may not resume examination proceedings. \F -- the ED can do it if they consider the observations relevant.
+        \item[\textbf{(d)}] Third party observations can be filed during opposition proceedings. \T
+        \item[\textbf{(e)}] Third party observations can be filed during limitation proceedings. \T
+        \item[\textbf{(f)}] Third party observations can be filed during central revocation proceedings. \T
     \end{itemize}
 
     \vspace{1cm}
@@ -2585,10 +2585,10 @@ So, the order of claim 1 and 2 has to be reversed. \\
     \item H11-05 - T/F question (Basic selection) \\
     For each of the statements below, indicate whether the statement is true or false.
     \begin{itemize}[leftmargin=3.5em]
-        \item[\textbf{(a)}] Oral proceedings may only be held at the request of any party to the proceedings.
-        \item[\textbf{(b)}] A first request for oral proceedings by a party to the proceedings may not be refused before a decision to refuse the application is taken.
-        \item[\textbf{(c)}] Oral proceedings before the Examining Division are, in principle, public.
-        \item[\textbf{(d)}] Oral proceedings before the Opposition Division are, in principle, public.
+        \item[\textbf{(a)}] Oral proceedings may only be held at the request of any party to the proceedings. \T
+        \item[\textbf{(b)}] A first request for oral proceedings by a party to the proceedings may not be refused before a decision to refuse the application is taken. \T
+        \item[\textbf{(c)}] Oral proceedings before the Examining Division are, in principle, public. \F
+        \item[\textbf{(d)}] Oral proceedings before the Opposition Division are, in principle, public. \T
     \end{itemize}
 
       \vspace{1cm}
@@ -2600,34 +2600,35 @@ So, the order of claim 1 and 2 has to be reversed. \\
     \vspace{0.5em}
     \textbf{The last day to validly file the European patent application, while validly claiming priority:}
     \begin{itemize}[leftmargin=3.5em]
-        \item[\textbf{(a)}] ... with the EPO in Munich is 27 April 2023.
-        \item[\textbf{(b)}] ... with the EPO in The Hague is 27 April 2023.
-        \item[\textbf{(c)}] ... with the German patent office in Munich is 27 April 2023.
+        \item[\textbf{(a)}] ... with the EPO in Munich is 27 April 2023. \F -- the last valid day should be the next day after 27 Apr 2023 on which all the EPO offices are open; since claiming priority is the end of a \textbf{12m} \textit{period} specified in the EPC.
+        \item[\textbf{(b)}] ... with the EPO in The Hague is 27 April 2023. \F
+        \item[\textbf{(c)}] ... with the German patent office in Munich is 27 April 2023. \F -- this would be an option to keep a valid prio claim but it is not the \textit{last} valid day to do so because of option (\textbf{a}).
     \end{itemize}
 
+    
     \vspace{0.5em}
     \textit{The applicant wishes to file another EP application claiming priority of a German application filed on 14 July 2022. Friday 14 July 2023 is a holiday in France, but a normal working day in Germany and the Netherlands.}
 
     \vspace{0.5em}
     \textbf{The last day to validly file the application, while validly claiming priority:}
     \begin{itemize}[leftmargin=3.5em]
-        \item[\textbf{(d)}] .. with the EPO in Munich is 14 July 2023.
-        \item[\textbf{(e)}] ... with the EPO in Munich is 15 July 2023.
-        \item[\textbf{(f)}] ... with the EPO in Munich is 17 July 2023.
-        \item[\textbf{(g)}] ... with the German patent office in Munich is 14 July 2023.
-        \item[\textbf{(h)}] ... with the German patent office in Munich is 17 July 2023.
-        \item[\textbf{(i)}] ... with the national French Patent Office is 14 July 2023.
-        \item[\textbf{(j)}] ... with the national French Patent Office is 15 July 2023.
-        \item[\textbf{(k)}] ... with the national French Patent Office is 17 July 2023.
+        \item[\textbf{(d)}] .. with the EPO in Munich is 14 July 2023. \T
+        \item[\textbf{(e)}] ... with the EPO in Munich is 15 July 2023. \F
+        \item[\textbf{(f)}] ... with the EPO in Munich is 17 July 2023. \F
+        \item[\textbf{(g)}] ... with the German patent office in Munich is 14 July 2023. \T
+        \item[\textbf{(h)}] ... with the German patent office in Munich is 17 July 2023. \F
+        \item[\textbf{(i)}] ... with the national French Patent Office is 14 July 2023. \F
+        \item[\textbf{(j)}] ... with the national French Patent Office is 15 July 2023. \F
+        \item[\textbf{(k)}] ... with the national French Patent Office is 17 July 2023. \T
     \end{itemize}
 
     \vspace{0.5em}
     \textbf{General Priority Statements:}
     \begin{itemize}[leftmargin=3.5em]
-        \item[\textbf{(l)}] The applicant may request an extension of the priority period with another 2 months.
-        \item[\textbf{(m)}] Failure to meet the priority period may be remedied using further processing provided all requirements are fulfilled.
-        \item[\textbf{(n)}] Failure to meet the priority period may be remedied using re-establishment provided all requirements are fulfilled.
-        \item[\textbf{(o)}] Failure to meet the priority period may be remedied by adding a declaration of priority to the earlier application within 16 months from the earliest priority date claimed.
+        \item[\textbf{(l)}] The applicant may request an extension of the priority period with another 2 months. \F
+        \item[\textbf{(m)}] Failure to meet the priority period may be remedied using further processing provided all requirements are fulfilled. \F
+        \item[\textbf{(n)}] Failure to meet the priority period may be remedied using re-establishment provided all requirements are fulfilled. \T
+        \item[\textbf{(o)}] Failure to meet the priority period may be remedied by adding a declaration of priority to the earlier application within 16 months from the earliest priority date claimed. \T
     \end{itemize}
 
       \vspace{1cm}
