--- a/main.tex
+++ b/main.tex
@@ -2573,7 +2573,7 @@ So, the order of claim 1 and 2 has to be reversed. \\
     \begin{itemize}[leftmargin=3.5em]
         \item[\textbf{(a)}] Any third party may file observations concerning the patentability of an invention but, by that act, do not become a party to the proceedings. \T
         \item[\textbf{(b)}] Any party to the proceedings may file third party observations concerning the patentability of an invention. \F -- the provision of \art{115} is only for \textit{third} parties, i.e., those not already party to the proceedings.
-        \item[\textbf{(c)}] If \textit{prima facie} relevant third party observations are filed after the applicant has given his approval under \ru{71(3)}, the Examining Division may not resume examination proceedings. \F -- the ED can do it if they consider the observations relevant.
+        \item[\textbf{(c)}] If \textit{prima facie} relevant third party observations are filed after the applicant has given his approval under \ru{71(3)}, the Examining Division may not resume examination proceedings. \F -- the ED can do it if they consider the observations relevant up handover to postal.
         \item[\textbf{(d)}] Third party observations can be filed during opposition proceedings. \T
         \item[\textbf{(e)}] Third party observations can be filed during limitation proceedings. \T
         \item[\textbf{(f)}] Third party observations can be filed during central revocation proceedings. \T
@@ -2585,7 +2585,7 @@ So, the order of claim 1 and 2 has to be reversed. \\
     \item H11-05 - T/F question (Basic selection) \\
     For each of the statements below, indicate whether the statement is true or false.
     \begin{itemize}[leftmargin=3.5em]
-        \item[\textbf{(a)}] Oral proceedings may only be held at the request of any party to the proceedings. \T
+        \item[\textbf{(a)}] Oral proceedings may only be held at the request of any party to the proceedings. \F -- can also be held at motion of EPO.
         \item[\textbf{(b)}] A first request for oral proceedings by a party to the proceedings may not be refused before a decision to refuse the application is taken. \T
         \item[\textbf{(c)}] Oral proceedings before the Examining Division are, in principle, public. \F
         \item[\textbf{(d)}] Oral proceedings before the Opposition Division are, in principle, public. \T
@@ -2616,7 +2616,7 @@ So, the order of claim 1 and 2 has to be reversed. \\
         \item[\textbf{(e)}] ... with the EPO in Munich is 15 July 2023. \F
         \item[\textbf{(f)}] ... with the EPO in Munich is 17 July 2023. \F
         \item[\textbf{(g)}] ... with the German patent office in Munich is 14 July 2023. \T
-        \item[\textbf{(h)}] ... with the German patent office in Munich is 17 July 2023. \F
+        \item[\textbf{(h)}] ... with the German patent office in Munich is ./17 July 2023. \F
         \item[\textbf{(i)}] ... with the national French Patent Office is 14 July 2023. \F
         \item[\textbf{(j)}] ... with the national French Patent Office is 15 July 2023. \F
         \item[\textbf{(k)}] ... with the national French Patent Office is 17 July 2023. \T
@@ -2628,7 +2628,7 @@ So, the order of claim 1 and 2 has to be reversed. \\
         \item[\textbf{(l)}] The applicant may request an extension of the priority period with another 2 months. \F
         \item[\textbf{(m)}] Failure to meet the priority period may be remedied using further processing provided all requirements are fulfilled. \F
         \item[\textbf{(n)}] Failure to meet the priority period may be remedied using re-establishment provided all requirements are fulfilled. \T
-        \item[\textbf{(o)}] Failure to meet the priority period may be remedied by adding a declaration of priority to the earlier application within 16 months from the earliest priority date claimed. \T
+        \item[\textbf{(o)}] Failure to meet the priority period may be remedied by adding a declaration of priority to the earlier application within 16 months from the earliest priority date claimed. \F -- \ru{52(2)} only applies when priority \textit{\textbf{was observed}} but the \textbf{\textit{declaration}} has not been filed.
     \end{itemize}
 
       \vspace{1cm}
@@ -2637,9 +2637,9 @@ So, the order of claim 1 and 2 has to be reversed. \\
     \item H12-08 \\
     Representing Mr. A: Communication C1 (\art{94(3)}), dated 21 June 2019 (4m period). 21 Oct 2019: 2m extension granted. 18 Dec 2019: further 1m extension requested (rejected in C2 on 10 Jan 2020). Loss of rights noted in C3 on 22 Jan 2020.
     \begin{itemize}[leftmargin=3.5em]
-        \item[\textbf{(a)}] What is the legal status today, 15 March 2020, and what would you do to save the application?
-        \item[\textbf{(b)}] Would an appeal against the rejection dated 10 January 2020 be admissible?
-        \item[\textbf{(c)}] Can you have the finding as to the loss of rights reviewed by a Board of Appeal?
+        \item[\textbf{(a)}] What is the legal status today, 15 March 2020, and what would you do to save the application? -- Applicant has \textbf{2m} from date of communication about loss of rights (not the date of the decision) to request \textsc{fp}. Cheaper than requesting a decision and filing an appeal. 
+        \item[\textbf{(b)}] Would an appeal against the rejection dated 10 January 2020 be admissible? -- you cannot appeal a decision to not grant an extension under \art{106(2)}. In any case; appeal would only work if there was a substantial procedural violation, which in this case there wasn't. The EPO doesn't have to grant two extensions in a row and Christmas holidays is not a \textit{force majeure} reason for a second extension. 
+        \item[\textbf{(c)}] Can you have the finding as to the loss of rights reviewed by a Board of Appeal? \T -- but loss of rights comm. is \textbf{not a decision}. You need to request a decision within \textbf{2m} under \art{112(2)} in order to have it reviewed by BoA.
     \end{itemize}
 
     \vspace{1cm}
@@ -2648,11 +2648,11 @@ So, the order of claim 1 and 2 has to be reversed. \\
     \item H13-11 - T/F question (Basic selection) \\
     NL1 filed 2 Feb 2018. Today, 4 April 2019, the applicant discovers he forgot to file an EP application claiming priority.
     \begin{itemize}[leftmargin=3.5em]
-        \item[\textbf{(a)}] Filed today claiming priority without specific remedy if NL1 is not yet published.
-        \item[\textbf{(b)}] Filed today and priority added until 2 June 2019 without FP or RE.
-        \item[\textbf{(c)}] Filed today and priority added until 3 June 2019 without FP or RE.
-        \item[\textbf{(d)}] Too late to file and request RE, as the last day for RE was 2 April 2019.
-        \item[\textbf{(e)}] Only possible if filed today and requesting RE today.
+        \item[\textbf{(a)}] Filed today claiming priority without specific remedy if NL1 is not yet published. \F
+        \item[\textbf{(b)}] Filed today and priority added until 2 June 2019 without FP or RE. \F
+        \item[\textbf{(c)}] Filed today and priority added until 3 June 2019 without FP or RE. \F
+        \item[\textbf{(d)}] Too late to file and request RE, as the last day for RE was 2 April 2019. \F
+        \item[\textbf{(e)}] Only possible if filed today and requesting RE today. \T
     \end{itemize}
 
     \vspace{1cm}
@@ -2661,10 +2661,10 @@ So, the order of claim 1 and 2 has to be reversed. \\
     \item H13-12 - T/F question (Basic selection) \\
     Applicant mistyped application number in \art{94(3)} response. EPO faxed/phoned before expiry. EPO employee said "OK" on phone, but loss of rights noted a month later.
     \begin{itemize}[leftmargin=3.5em]
-        \item[\textbf{(a)}] Remedy by asking for a decision and arguing good faith/telephone call date.
-        \item[\textbf{(b)}] Remedy by requesting free 2m extension of original 4m limit.
-        \item[\textbf{(c)}] Remedy by payment of FP fee and filing correct response within 2m of C3.
-        \item[\textbf{(d)}] Remedy by payment of RE fee and arguing all due care within 2m of C3.
+        \item[\textbf{(a)}] Remedy by asking for a decision and arguing good faith/telephone call date. \T
+        \item[\textbf{(b)}] Remedy by requesting free 2m extension of original 4m limit. \F
+        \item[\textbf{(c)}] Remedy by payment of FP fee and filing correct response within 2m of C3. \T
+        \item[\textbf{(d)}] Remedy by payment of RE fee and arguing all due care within 2m of C3. \F
     \end{itemize}
 
   \vspace{1cm}
